--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,23 @@
 language: perl
-sudo: false
-perl:
-  - "5.20"
-  - "5.18"
-  - "5.16"
-  - "5.14"
-  - "5.12"
-  - "5.10"
-  - "5.8"
+arch:
+  - arm64
+matrix:
+  include:
+    - dist: xenial
+      perl: 5.24
+    - dist: bionic
+      perl: 5.26
+    - dist: focal
+      perl: 5.32
+
+#perl:
+#  - "5.20"
+#  - "5.18"
+#  - "5.16"
+#  - "5.14"
+#  - "5.12"
+#  - "5.10"
+#  - "5.8"
+
 before_script:
   - export BATCH=yes
