--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,16 +18,16 @@ jobs:
     strategy:
       matrix:
         include:
-          - config_name: ubuntu-20.04
-            os: ubuntu-20.04
           - config_name: ubuntu-22.04
             os: ubuntu-22.04
-          - config_name: macos-12
-            os: macos-12
+          - config_name: ubuntu-24.04
+            os: ubuntu-24.04
           - config_name: macos-13
             os: macos-13
           - config_name: macos-14
             os: macos-14
+          - config_name: macos-15
+            os: macos-15
           - config_name: windows-latest
             os: windows-latest
 
@@ -60,7 +60,7 @@ jobs:
           - image: perl:5.40.0-slim-bookworm
           ## use debian:* images only if there's no suitable perl:* image
           #- image: debian:bookworm
-          - image: ubuntu:noble
+          - image: ubuntu:focal
           - image: rockylinux:9
           - image: fedora:40
 
@@ -90,14 +90,14 @@ jobs:
     strategy:
       matrix:
         include:
-          - osvers: '13.3'
-          - osvers: '14.1'
+          - osvers: '13.4'
+          - osvers: '14.2'
     steps:
     - uses: actions/checkout@v4
       with:
         clean: false
         show-progress: false
-    - uses: cross-platform-actions/action@v0.25.0
+    - uses: cross-platform-actions/action@v0.26.0
       with:
         operating_system: freebsd
         version: '${{ matrix.osvers }}'
